--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node ./bin/www",
-    "start-nodemon": "nodemon ./bin/www"
+    "test": "nodemon ./bin/www"
   },
   "nodemonConfig": {
     "ignore": [
@@ -26,7 +26,7 @@
     "express-fileupload": "^0.3.0",
     "mongoose": "^4.13.4",
     "morgan": "^1.9.0",
-    "nodemon": "^1.12.1",
+    "nodemon": "^1.12.5",
     "phantom": "^4.0.11",
     "serve-favicon": "^2.4.5"
   }
